--- a/_posts/2015-01-01-hello.md
+++ b/_posts/2015-01-01-hello.md
@@ -3,7 +3,7 @@ layout: post
 title: Hello, Jekyll and TtskchTheme
 tags: hello jekyll theme
 eye_catch: http://jekyllrb.com/img/logo-2x.png
-math: true
+mathjax: "true"
 ---
 
 You can use most of standard Markdown features.
@@ -52,11 +52,10 @@ You can use GitHub flavored emoji :+1:
 > **Note**  
 > It's not a very good idea to use emoji before `<!--more-->` because jekyll can't render emoji in the excerpted content.
 
+ $$e^{i\pi} + 1 = 0$$
+
 ## See also
 
 [Markdown](http://daringfireball.net/projects/markdown/syntax)
 
-
 Hola
-
-$a$
