--- a/_posts/2015-01-01-hello.md
+++ b/_posts/2015-01-01-hello.md
@@ -6,26 +6,11 @@ eye_catch: http://jekyllrb.com/img/logo-2x.png
 mathjax: "true"
 ---
 
-You can use most of standard Markdown features.
-
-## List
-
-* foo
-* bar
-    * indentation
-        * nesting indentation
-    * indentation
-* buz
-
-<!--more-->
-
 ## Quote
 
 > quote
 >
 > > nesting quote
->
-> quote
 
 ## Strikethrough
 
@@ -33,9 +18,8 @@ You can use most of standard Markdown features.
 
 ## Syntax highlighting
 
-```php
-<?php
-echo 'Hello, World!';
+```m
+disp('hello world')
 ```
 
 ## Tables
@@ -57,5 +41,3 @@ You can use GitHub flavored emoji :+1:
 ## See also
 
 [Markdown](http://daringfireball.net/projects/markdown/syntax)
-
-Hola
