--- a/_posts/2015-01-01-hello.md
+++ b/_posts/2015-01-01-hello.md
@@ -27,17 +27,10 @@ disp('hello world')
 First Header  | Second Header
 ------------- | -------------
 Content Cell  | Content Cell
-Content Cell  | Content Cell
 
-## Emoji
-
-You can use GitHub flavored emoji :+1:
+## Emoji :+1:
 
 > **Note**  
-> It's not a very good idea to use emoji before `<!--more-->` because jekyll can't render emoji in the excerpted content.
+> It's not a very good idea to use emoji before `<!--more-->` because jekyll can't render emoji in the excerpted content. $e^{i\pi} + 1 = 0$
 
- $$e^{i\pi} + 1 = 0$$
-
-## See also
-
-[Markdown](http://daringfireball.net/projects/markdown/syntax)
+## [Markdown](http://daringfireball.net/projects/markdown/syntax)
