--- a/_posts/2019-01-06-diffeq.md
+++ b/_posts/2019-01-06-diffeq.md
@@ -6,65 +6,33 @@ tags: best-practices useful-packages
 eye_catch: https://t4.ftcdn.net/jpg/02/28/03/25/240_F_228032509_5no9iLuwmjksnDktCBau2EDnkfHFItRE.jpg
 ---
 
-# Write differential equations very easily with `diffcoeff`!
-
 Often, the mathematician needs to represent mathematical expressions such as differential equations. So that this is not a nightmare, the mathematician [Andrew Parsloe](https://link.springer.com/article/10.1007/BF02189611) created a package that offers super useful commands. This post will deal with such commands, show the results without the package and with the package to see the differences. Let's go!
 
 <!--more-->
 
-In the first place, we need to load the package `diffcoeff`. I recommend using the last version, i.e., version 3.0. It's available on TeXLive distribution for all platforms like GNU/Linux, Mac OS X, Windows 10, and so on. 
+In the first place, we need to load the package `diffcoeff`. I recommend using the last version, i.e., version 3.0. It's available on TeX Live distribution for all platforms like GNU/Linux, Mac OS X, Windows 10, and so on. 
 
 The `diffcoeff` package works thanks to $$\LaTeX 3_{\varepsilon}$$ kernel.
 
+## Minimal Working example
+
 {% highlight tex %}
 \documentclass{article}
-\usepackage[ISO]{diffcoeff}
+\usepackage[ISO]{diffcoeff}	% Important load diffcoeff package.
 \begin{document}
-$\diff{y}{x}$
-
-$\diff{\ln x}/{x}$
-
-$\diff[2]yx$
-
-$\diff[n+1]yx$
-
-$\diff[1]yx$
-
-$\diff[2]y/x$
-
-$\diff[n+1]y/x$
-
-$\diff{\ln\sin x}{\sin x}\diff{\sin x}x$
-
-$\diff[2]{\ln\sin x}{\sin x}$
-
-$\diff[2]{\ln\sin x}{\sin x}$
-
-$\diff{f(x)}1/x{},\quad\diff{f(x)}{(1/x)}$
-
-$\diff{\nilmu f(x)}{\onemu 1/x},\quad\diff{\nilmu f(x)}{(1/x)}$
+$\diff{y}{x}$			% Appears the left hand side of differential equation.
 \end{document}
 {% endhighlight %}
 
-$$\frac{\mathrm{d}y}{\mathrm{d}x}$$
+| $$\LaTeX$$ expression `diffcoeff` | Output |
+|:---------------------------------:|:------:|
+| $$\verb!$\diff{y}{x}$!$$ or $$\verb!$\diff[1]yx$!$$ | $$\color{#0000FF}\frac{\mathrm{d}y}{\mathrm{d}x}$$ |
+| $$\verb!$\diff{\ln x}/{x}$!$$ | $$\color{#0000FF}\mathrm{d} \ln x/\mathrm{d}x$$ |
+| $$\verb!$\diff[2]yx$!$$ and $$\verb!$\diff[2]y/x!$$ | $$\color{#0000FF}\frac{\mathrm{d}^2y}{\mathrm{d}x^2}\quad\mathrm{d}^2y/\mathrm{d}x^2$$ |
+| $$\verb!$\diff[n+1]yx$!$$ and $$\verb!$\diff[n+1]y/x$!$$ | $$\color{#0000FF}\frac{\mathrm{d}^{n+1}y}{\mathrm{d}x^{n+1}}\quad\mathrm{d}^{n+1}y/\mathrm{d}x^{n+1}$$ |
+| $$\verb!$\diff{\ln\sin x}{\sin x}\diff{\sin x}x$!$$| $$\color{#0000FF}\frac{\mathrm{d}\ln\sin x}{\mathrm{d}\sin x}\frac{\mathrm{d}\sin x}{\mathrm{d}x}$$ |
+| $$\verb!$\diff[2]{\ln\sin x}{\sin x}$!$$ | $$\color{#0000FF}\frac{\mathrm{d}^2\ln\sin x}{\mathrm{d}{\left(\sin x\right)}^2}$$ |
+| $$\verb!$\diff{f(x)}1/x{},\quad\diff{f(x)}{(1/x)}$!$$ | $$\color{#0000FF}\frac{\mathrm{d}f(x)}{\mathrm{d}1/x},\quad\frac{\mathrm{d}f(x)}{\mathrm{d}(1/x)}$$ |
+| $$\verb!$\diff{\nilmu f(x)}{\onemu 1/x},\quad\diff{\nilmu f(x)}{(1/x)}$!$$ | $$\color{#0000FF}\frac{\mathrm{d}\ f(x)}{\mathrm{d}\ 1/x},\quad\frac{\mathrm{d}\ f(x)}{\mathrm{d}\ (1/x)}$$ |
 
-$$\mathrm{d} \ln x/\mathrm{d}x$$
-
-$$\frac{\mathrm{d}^2y}{\mathrm{d}x^2}$$
-
-$$\frac{\mathrm{d}^{n+1}y}{\mathrm{d}x^{n+1}}$$
-
-$$\frac{\mathrm{d}y}{\mathrm{d}x}$$
-
-$$\mathrm{d}^2y/\mathrm{d}x^2$$
-
-$$\mathrm{d}^{n+1}y/\mathrm{d}x^{n+1}$$
-
-$$\frac{\mathrm{d}\ln\sin x}{\mathrm{d}\sin x}\frac{\mathrm{d}\sin x}{\mathrm{d}x}$$
-
-
-$$\frac{\mathrm{d}^2\ln\sin x}{\mathrm{d}{\left(\sin x\right)}^2}$$
-
-$$\frac{\mathrm{d}f(x)}{\mathrm{d}1/x},\quad\frac{\mathrm{d}f(x)}{\mathrm{d}(1/x)}$$
-
-$$\frac{\mathrm{d}\ f(x)}{\mathrm{d}\ 1/x},\quad\frac{\mathrm{d}\ f(x)}{\mathrm{d}\ (1/x)}$$
+$$\operatorname{sen} \textcolor{blue}{F=ma}$$
