--- a/_posts/2019-01-06-diffeq.md
+++ b/_posts/2019-01-06-diffeq.md
@@ -32,7 +32,38 @@ $\diff{y}{x}$			% Appears the left hand side of differential equation.
 | $$\verb!$\diff[n+1]yx$!$$ and $$\verb!$\diff[n+1]y/x$!$$ | $$\color{#0000FF}\frac{\mathrm{d}^{n+1}y}{\mathrm{d}x^{n+1}}\quad\mathrm{d}^{n+1}y/\mathrm{d}x^{n+1}$$ |
 | $$\verb!$\diff{\ln\sin x}{\sin x}\diff{\sin x}x$!$$| $$\color{#0000FF}\frac{\mathrm{d}\ln\sin x}{\mathrm{d}\sin x}\frac{\mathrm{d}\sin x}{\mathrm{d}x}$$ |
 | $$\verb!$\diff[2]{\ln\sin x}{\sin x}$!$$ | $$\color{#0000FF}\frac{\mathrm{d}^2\ln\sin x}{\mathrm{d}{\left(\sin x\right)}^2}$$ |
-| $$\verb!$\diff{f(x)}1/x{},\quad\diff{f(x)}{(1/x)}$!$$ | $$\color{#0000FF}\frac{\mathrm{d}f(x)}{\mathrm{d}1/x},\quad\frac{\mathrm{d}f(x)}{\mathrm{d}(1/x)}$$ |
+| $$\verb!$\diff{f(x)}{1/x},\quad\diff{f(x)}{(1/x)}$!$$ | $$\color{#0000FF}\frac{\mathrm{d}f(x)}{\mathrm{d}1/x},\quad\frac{\mathrm{d}f(x)}{\mathrm{d}(1/x)}$$ |
 | $$\verb!$\diff{\nilmu f(x)}{\onemu 1/x},\quad\diff{\nilmu f(x)}{(1/x)}$!$$ | $$\color{#0000FF}\frac{\mathrm{d}\ f(x)}{\mathrm{d}\ 1/x},\quad\frac{\mathrm{d}\ f(x)}{\mathrm{d}\ (1/x)}$$ |
+| $$\verb!$\diff*{(ax^2+bx+c)}x$!$$ | $$\color{#0000FF}\frac{\mathrm{d}}{\mathrm{d}x}\left(ax^2+bx+c\right)$$ |
+| $$\verb!\diff[2]yx=\diff*{\diff yx}x!$$ | $$\color{#0000FF}\frac{\mathrm{d}}{\mathrm{d}x}\frac{\mathrm{d}y}{\mathrm{d}x} |
+| $$\verb!\diff*{(ax^2+bx+c)}/x!$$ | $$\left(d/dx\right)\left(ax^2+bx+c\right)$$|
+| Without `ISO` option: $$\verb!\diff[2]yx[0]!$$ | $$\left.\frac{d^2y}{dx^2}\right\vert_{0}$$|
+| $$\verb!\diff[2]yx[0]!$$ | $${\left(\frac{\mathrm{d}^2y}{\mathrm{d}x^2}\right)}_{0}$$ |
+| $$\verb!\diff{\ln \sin x}/{\sin x}[x=\pi/6]!$$ | $${\left(\mathrm{d}\ln\sin x/\mathrm{d}\sin x\right)}_{x=\pi/6}$$ |
+| Without `ISO` option: $$\verb!\diff{\sin x}x[0]^{\pi/2}!$$ | $$\left.\frac{d\sin x}{dx}\right\vert_{0}^{\pi/2}$$ |
+| $$\verb!\verb!\diff{\sin x}x[0]^{\pi/2}!$$ | $${\left(\frac{\mathrm{d}\sin x}{\mathrm{d}x}\right)}_{0}^{\pi/2}$$ |
+| Needs to load `amsmath` package: $$\verb!\tfrac 12 m \diff x/t[]^2!$$ | $$\tfrac{1}{2}m{\left(\mathrm{d}x/\mathrm{d}t\right)}^2$$ |
+| $$\verb!\diffp{F}{x}!$ or $$\verb!\diffp Fx!$$ | $$\frac{\partial F}{\partial x}$$ |
+| $$\verb!\diffp [3]F/x,\quad \diffp[n]F/x!$$ | $$\partial^3F/\partial x^3,\quad\partial^nF/\partial x^n $$|
+| $$\verb!\diffp[n+1]Fx!$$ | $$\frac{\partial^{n+1}F}{\partial x^{n+1}}$$ |
+| $$\verb!\diffp ST[V]!$$ | $${\left(\frac{\partial S}{\partial T}\right)}_V$$ |
+| $$\verb!\diffp S/T[V]!$$ | $${\left(\partial S/\partial T\right)}_{V}$$ |
+| $$\verb!\diffp {F(x,y)}x[(0,0)]!$$ | $${\left(\frac{\partial F\left(x,y\right)}{\partial x}\right)}_{\left(0,0\right)}$$ |
+| $$\verb!\diffp yx[]!$$ | $$\left(\frac{\partial y}{\partial x}\right)$$ |
+| $$\verb!\diffp L{q_k}-\diff*{\diffp L{\dot{q}_k}[]}t=0!$$ | $$\frac{\partial L}{\partial q_k}-\frac{\mathrm{d}}{\mathrm{d}t}\left(\frac{\partial L}{\partial \dot{q}_k}\right)=0$$|
+| $$\verb!\diffp*[2]{\Phi(x,y,z)}x!$$ | $$\frac{\partial^2}{\partial x^2}\Phi\left(x,y,z\right)$$ |
+| $$\verb!\diffp*[n]{f(x)}/x!$$ | $$\left(\partial^n/\partial x^n\right)f(x)$$ |
+| $$\verb!\diffp*{\frac PT}U[V]=\diffp*{\frac 1T}V[U]!$$ | $${\left(\frac{\partial}{\partial U}\frac{P}{T}\right)}_V={\left(\frac{\partial}{\partial V}\frac{1}{T}\right)}_{U}$$ |
+| $$\verb!\diffp F{x,y,z}!$$ | $$\frac{\partial^3F}{\partial x\partial y\partial z}$$ |
+| $$\verb!\diffp F/{x,y,z}!!$$ | $$\partial^3F/\partial x\partial y\partial z$$ |
+| $$\verb!\diffp[2,3]F{x,y,z}!$$ | $$\frac{\partial^6F}{\partial x^2\partial y^3\partial z}$$ |
+| $$\verb!\diffp[1,m+1,m-1]{F(x,y,z)}{x,y,z}!$$ | $$\frac{\partial^{2m+1}F\left(x,y,z\right)}{\partial x\partial y^{m+1}\partial z^{m-1}}$$ |
+| $$\verb!\diffp[2km,m-1,m+1]{F(x,y,z)}{x,y,z}!$$ | $$\frac{\partial^{2km+2m}F\left(x,y,z\right)}{\partial x^{2km}\partial y^{m-1}\partial z^{m+1}}$$ |
+| $$\verb!!$$ | |
+| $$\verb!!$$ | |
+| $$\verb!!$$ | |
+| $$\verb!!$$ | |
+| $$\verb!!$$ | |
+| $$\verb!!$$ | |
 
 $$\operatorname{sen} \textcolor{blue}{F=ma}$$
