--- a/_posts/2019-01-06-diffeq.md
+++ b/_posts/2019-01-06-diffeq.md
@@ -43,7 +43,7 @@ $\diff{y}{x}$			% Appears the left hand side of differential equation.
 | Without `ISO` option: $$\verb!\diff{\sin x}x[0]^{\pi/2}!$$ | $$\left.\frac{d\sin x}{dx}\right\vert_{0}^{\pi/2}$$ |
 | $$\verb!\verb!\diff{\sin x}x[0]^{\pi/2}!$$ | $${\left(\frac{\mathrm{d}\sin x}{\mathrm{d}x}\right)}_{0}^{\pi/2}$$ |
 | Needs to load `amsmath` package: $$\verb!\tfrac 12 m \diff x/t[]^2!$$ | $$\tfrac{1}{2}m{\left(\mathrm{d}x/\mathrm{d}t\right)}^2$$ |
-| $$\verb!\diffp{F}{x}!$ or $$\verb!\diffp Fx!$$ | $$\frac{\partial F}{\partial x}$$ |
+| $$\verb!\diffp{F}{x}!$$ or $$\verb!\diffp Fx!$$ | $$\frac{\partial F}{\partial x}$$ |
 | $$\verb!\diffp [3]F/x,\quad \diffp[n]F/x!$$ | $$\partial^3F/\partial x^3,\quad\partial^nF/\partial x^n $$|
 | $$\verb!\diffp[n+1]Fx!$$ | $$\frac{\partial^{n+1}F}{\partial x^{n+1}}$$ |
 | $$\verb!\diffp ST[V]!$$ | $${\left(\frac{\partial S}{\partial T}\right)}_V$$ |
