--- a/_posts/2019-01-06-diffeq.md
+++ b/_posts/2019-01-06-diffeq.md
@@ -19,6 +19,8 @@ The `diffcoeff` package works thanks to $$\LaTeX 3_{\varepsilon}$$ kernel.
 {% highlight tex %}
 \documentclass{article}
 \usepackage[ISO]{diffcoeff}	% Important load diffcoeff package.
+%\usepackage{amsmath}
+
 \begin{document}
 $\diff{y}{x}$			% Appears the left hand side of differential equation.
 \end{document}
@@ -59,5 +61,17 @@ $\diff{y}{x}$			% Appears the left hand side of differential equation.
 | $$\verb!$\diffp[2,3]F{x,y,z}$!$$ | $$\color{#0000FF}\frac{\partial^6F}{\partial x^2\partial y^3\partial z}$$ |
 | $$\verb!$\diffp[1,m+1,m-1]{F(x,y,z)}{x,y,z}$!$$ | $$\color{#0000FF}\frac{\partial^{2m+1}F\left(x,y,z\right)}{\partial x\partial y^{m+1}\partial z^{m-1}}$$ |
 | $$\verb!$\diffp[2km,m-1,m+1]{F(x,y,z)}{x,y,z}$!$$ | $$\color{#0000FF}\frac{\partial^{2km+2m}F\left(x,y,z\right)}{\partial x^{2km}\partial y^{m-1}\partial z^{m+1}}$$ |
+| $$\verb!$\diffp[2km,m-1,m+1][2m(k+1)]{F(x,y,z)}{x,y,z}$!$$ | $$\color{#0000FF}\frac{\partial^{2m(k+1)}F\left(x,y,z\right)}{\partial x^{2km}\partial y^{m-1}\partial z^{m+1}}$$ |
+| $$\verb!$\diffp[m/2+n/2,m/2,n/2]F{x,y,z}$!$$ | $$\color{#0000FF}\frac{\partial^{2n/2+2m/2}F}{\partial x^{m/2+n/2}\partial y^{m/2}\partial z^{n/2}}$$ |
+| $$\verb!$\diffp[m/2+n/2,m/2,n/2][m+n]F{x,y,z}$!$$ | $$\color{#0000FF}\frac{\partial^{m+n}F}{\partial x^{m/2+n/2}\partial y^{m/2}\partial z^{n/2}}$$ |
+| $$\verb!$\diffp{A_i}{x^j,x^k}$!$$ | $$\color{#0000FF}\frac{\partial^2A_i}{\partial x^j\partial x^k}$$ |
+| $$\verb!$\diffp{A_i}{x^j\negmu,x^k}$!$$ | $$\color{#0000FF}\frac{\partial^2A_i}{\partial x^j\partial x^k}$$ |
+| $$\verb!$\diffp [2m-(k+1),2(k+1)-m]{F(x,y,z)}{x,y,z}$!$$ | $$\color{#0000FF}\frac{\partial^{k+m+2}F\left(x,y,z\right)}{\partial x^{2m-(k+1)}\partial y^{2(k+1)-m}\partial z}$$ |
+| $$\verb!$\diffp[f(k+1)+1,f(k-1)-1]{F(x,y)}{x,y}$!$$| $$\color{#0000FF}\frac{\partial^{f(k-1)+f(k+1)}F\left(x,y\right)}{\partial x^{f(k+1)+1}\partial y^{f(k-1)-1}}$$ |
+| $$\verb!$\diffp[2(3+f(k))+1,1-3(f(k)-2)]{F(x,y)}{x,y}$!$$| $$\color{#0000FF}\frac{\partial^{14-f(k)}F\left(x,y\right)}{\partial x^{2\left(3+f(k)\right)+1}\partial y^{1-3\left(f(k)-2\right)}}$$|
+| $$\verb!$\diffp[m^2+2(k-1),m^2-(k+1)]F{x,y,z,w}$!$$ | $$\color{#0000FF}\frac{\partial^{2m^2+k-1} F}{\partial x^{m^2+2(k-1)}\partial y^{m^2-(k+1)}\partial z\partial w}$$ |
+| $$\verb!$\diffp[2]q{\frac 1\Theta}$!$$ | $$\color{#0000FF}\frac{\partial^2q}{\partial{\left(\frac{1}{\Theta}\right)}^2}$$ |
+| $$\verb!$\diffp q{(\frac 1\Theta),V}$!$$ | $$\color{#0000FF}\frac{\partial^2q}{\partial\left(\frac{1}{\Theta}\right)\partial V}$$ |
+| $$\verb!$\jacob{u,v,w}{x,y,z}$!$$ | $$\color{#0000FF}\frac{\partial\left(u,v,w\right)}{\partial\left(x,y,z\right)}$$ |
 
-$$\operatorname{sen} \textcolor{blue}{F=ma}$$
+$$\textcolor{blue}{\operatorname{sen}}$$
