--- a/_posts/2019-01-06-diffeq.md
+++ b/_posts/2019-01-06-diffeq.md
@@ -14,6 +14,10 @@ In the first place, we need to load the package `diffcoeff`. I recommend using t
 
 The `diffcoeff` package works thanks to $$\LaTeX 3_{\varepsilon}$$ kernel.
 
+### Update 3.1 on 09/03/2019 :zap:
+
+From now on, this package is compatible with differentials of a vector-valued function. Motivate for this [**question**](https://tex.stackexchange.com/a/478647) on popular forum of $$\LaTeX$$. Check out the section six of `diffcoeff`[**documentation on CTAN**](http://ctan.dcc.uchile.cl/macros/latex/contrib/diffcoeff/diffcoeff.pdf) for this update. :smiley:
+
 ## Minimal Working example
 
 {% highlight tex %}
@@ -73,5 +77,3 @@ $\diff{y}{x}$			% Appears the left hand side of differential equation.
 | $$\verb!$\diffp[2]q{\frac 1\Theta}$!$$ | $$\color{#0000FF}\frac{\partial^2q}{\partial{\left(\frac{1}{\Theta}\right)}^2}$$ |
 | $$\verb!$\diffp q{(\frac 1\Theta),V}$!$$ | $$\color{#0000FF}\frac{\partial^2q}{\partial\left(\frac{1}{\Theta}\right)\partial V}$$ |
 | $$\verb!$\jacob{u,v,w}{x,y,z}$!$$ | $$\color{#0000FF}\frac{\partial\left(u,v,w\right)}{\partial\left(x,y,z\right)}$$ |
-
-$$\textcolor{blue}{\operatorname{sen}}$$
