--- a/src/_posts/2022-09-13-irc.md
+++ b/src/_posts/2022-09-13-irc.md
@@ -2,10 +2,51 @@
 layout: post
 title: IRC
 categories: linux
-tags: blas
+tags: irc
 eye_catch: https://user-images.githubusercontent.com/21283014/189955163-aa7007aa-9b3e-47c7-ba8a-bf27531f1394.png
 ---
 
-The most knowns libraries by linear algebra calculations are `BLAS` (Basic Linear Algebra Subprograms) and `LAPACK` (Linear Algebra PACKage).
+## Getting started with IRC
 
-## Floating-Pointing Numbers
+First, install some IRC client like [`weechat`](https://archlinux.org/packages/community/x86_64/weechat) as follows
+
+```console
+$ sudo pacman -S weechat
+resolving dependencies...
+looking for conflicting packages...
+
+Packages (1) weechat-3.6-1
+
+Total Download Size:    2.74 MiB
+Total Installed Size:  26.77 MiB
+
+:: Proceed with installation? [Y/n] 
+:: Retrieving packages...
+ weechat-3.6-1-x86_64 downloading...
+checking keyring...
+checking package integrity...
+loading package files...
+checking for file conflicts...
+:: Processing package changes...
+installing weechat...
+Optional dependencies for weechat
+    aspell: spellchecker support
+    guile: support for guile scripts [installed]
+    lua: support for lua scripts
+    perl: support for perl scripts [installed]
+    python: support for python scripts
+    ruby: support for ruby scripts
+    tcl: support for tcl scripts
+:: Running post-transaction hooks...
+(1/1) Arming ConditionNeedsUpdate...
+```
+
+Type `weechat` and we will start learning the commands `/` and shortcuts.
+
+#### Useful links
+
+- [Registration on `libera.chat`](https://libera.chat/guides/registration)
+- [Weechat tutorial](https://weechat.org/files/doc/stable/weechat_quickstart.en.html)
+- [Weechat key bindings](https://weechat.org/files/doc/stable/weechat_user.en.html#key_bindings)
+- [Arch Linux IRC channels](https://wiki.archlinux.org/title/Arch_IRC_channels#Other_channels)
+- [arch4edu IRC channel](https://github.com/arch4edu/arch4edu/blob/master/README.md?plain=1#L21)
